--- a/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
@@ -52,18 +52,6 @@
                                                                             }" aria-label="Default"
                         aria-describedby="inputGroup-sizing-default">
                 </div>
-
-                <!-- <span [ngSwitch]="line">
-                <p *ngSwitchCase="true">
-                
-                </p>
-                <p *ngSwitchCase="false">
-                
-                </p>
-                <p *ngSwitchDefault>
-                
-                </p>
-                </span> -->
             </div>
         </div>
 
@@ -71,7 +59,7 @@
 </div>
 
 
-
+<!-- todo saved reports -->
 
 
 
