--- a/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.scss
+++ b/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.scss
@@ -34,8 +34,10 @@
 
         .line-value-short {
             width: 3em;
+            text-align: center;
         }
     }
+
 
     .value-cell {
         min-width: 2em;
