--- a/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.scss
+++ b/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.scss
@@ -1,9 +1,16 @@
+.report-header {
+    justify-content: center;
+    font-weight: bolder;
+    font-size: 2em;
+    background-color: rgb(0, 212, 0);
+}
+
 .report-lines {
 
     .line-header {
         justify-content: center;
         font-weight: bolder;
-        color: red;
+        font-size: 2em;
     }
 
     .line-desc {
@@ -18,15 +25,22 @@
     }
 
     .line-value {
-            display: flex;
-            flex-direction: column;
-            // align-items: flex-start;
-            width: 100%;
-            align-items: stretch;
-            // flex-wrap: wrap;
+        display: flex;
+        flex-direction: column;
+        // align-items: flex-start;
+        width: 100%;
+        align-items: stretch;
+        // flex-wrap: wrap;
 
         .line-value-short {
             width: 3em;
+            text-align: center;
         }
+    }
+
+
+    .value-cell {
+        min-width: 2em;
+        text-align: left;
     }
 }
