draft more tiles in home menu

--- a/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.scss
+++ b/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.scss
@@ -10,4 +10,9 @@ button {
         height: 100%;
         width: 100%;
     }
+
+    .tile-name{
+        font-size: 2em;
+        word-wrap: break-word;
+    }
 }
