--- a/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
@@ -12,6 +12,19 @@
     <div class="col-6 ">
         <app-menu-tile [name]="'reports'"></app-menu-tile>
     </div>
+    <div class="col-6 ">
+        <app-menu-tile [name]="'ksiazka korespondencji'" [isLabelShowed]="true"></app-menu-tile>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-6 ">
+        <app-menu-tile [name]="'dane z TDR'" [isLabelShowed]="true"></app-menu-tile>
+    </div>
+    <div class="col-6 ">
+        <app-menu-tile [name]="'Ustawienia wszelakie'" [isLabelShowed]="true"></app-menu-tile>
+    </div>
 </div>
 
 
