--- a/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.html
@@ -1,5 +1,6 @@
 <div class="m-2">
     <button title="sarneg" type="button" class="btn btn-outline-primary">
-        <img src="assets/imgs/{{iconName}}" alt="">
+        <img *ngIf="!isLabelShowed" src="assets/imgs/{{iconName}}" alt="">
+        <span *ngIf="isLabelShowed" class="tile-name">{{name}}</span>
     </button>
 </div>
