--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -13,10 +13,10 @@
         </div>
 
         <div class="d-flex align-items-center">
-            <div class="ms-1" [routerLink]="'sarneg-page'">
+            <div class="ms-1" [routerLink]="'sarneg-tab'">
                 <img src="assets/imgs/sarneg-image.png" height="30" alt="">
             </div>
-            <div class="ms-1" [routerLink]="'vigenere-page'">
+            <div class="ms-1" [routerLink]="'vigenere-tab'">
                 <img src="assets/imgs/vigenere-image.png" height="30" alt="">
             </div>
             <div class="ms-1" [routerLink]="'reports-page'">
@@ -35,10 +35,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" [routerLink]="'sarneg-page'">kodowanie SARNEG </a>
+                    <a class="nav-link" [routerLink]="'sarneg-tab'">kodowanie SARNEG </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="'vigenere-page'">kodowanie Vigenere</a>
+                    <a class="nav-link" [routerLink]="'vigenere-tab'">kodowanie Vigenere</a>
                 </li>
                 <li *ngFor="let item of getFavouriteReports()" class="nav-item" (click)="setCurrentReport(item)">
                     <a class="nav-link" [routerLink]="'report-page'">{{item.name}}</a>
@@ -64,7 +64,7 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="'vigenere-page'">Help </a>
+                    <a class="nav-link" [routerLink]="'vigenere-tab'">Help </a>
                 </li>
             </ul>
         </div>
