--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
@@ -1,1 +1,56 @@
 <p>correspondence-book-page works!</p>
+
+<!-- 
+<div >
+    <div *ngFor="let line of report.lines" class="input-group mb-1 report-lines px-2">
+        <div class="input-group-text col-1 text-wrap line-header" id="inputGroup-sizing-default1">
+            {{line.lineHeader | uppercase}}</div>
+
+
+        <div class="input-group-text col-11 text-wrap align-content-start d-flex flex-column p-0"
+            id="inputGroup-sizing-default2">
+            <div class="line-desc p-1">
+                <div class="desc-header">{{line.descriptionHeader | uppercase}}</div>
+                <div *ngFor="let linedesc of line.descriptionLines" class="desc-content-line">{{linedesc}}</div>
+            </div>
+
+            <div class="d-flex flex-wrap line-value" [ngClass]="{
+                'flex-column': line.lineValues.length<=2,
+                'flex-row': line.lineValues.length>2,
+                }">
+                <div *ngFor="let lineValue of line.lineValues" class="d-flex m-1 align-items-center aa">
+                    <small *ngIf="lineValue.valueType !== lineValueTypes.bool" class="line-value-label me-1"
+                        id="inputGroup-sizing-default2">
+                        {{lineValue.label}}:
+                    </small>
+
+                    <input *ngIf="!lineValue.valueType || (lineValue.valueType === lineValueTypes.textLine)"
+                        [(ngModel)]="lineValue.value" type="text" class="form-control d-flex" aria-label="Default"
+                        aria-describedby="inputGroup-sizing-default">
+
+                    <div *ngIf="lineValue.valueType === lineValueTypes.textArea" class="d-flex">
+                        <textarea [(ngModel)]="lineValue.value" class="form-control" rows="3" cols="1000"
+                            aria-label="Default" aria-describedby="inputGroup-sizing-default"></textarea>
+                    </div>
+
+                    <input *ngIf="lineValue.valueType === lineValueTypes.shortNumber" [(ngModel)]="lineValue.value"
+                        type="number" class="form-control line-value-short" aria-label="Default"
+                        aria-describedby="inputGroup-sizing-default">
+
+                    <input *ngIf="lineValue.valueType === lineValueTypes.longNumber" [(ngModel)]="lineValue.value"
+                        type="number" class="form-control line-value-long" aria-label="Default"
+                        aria-describedby="inputGroup-sizing-default">
+
+                    <button *ngIf="lineValue.valueType === lineValueTypes.bool" type="button"
+                        class="checkbox btn btn-default">
+                        <label>
+                            <span>{{lineValue.label}}: </span>
+                            <input type="checkbox" class="checkbox style-2 " checked="{{lineValue.value}}">
+                        </label>
+                    </button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div> -->
