--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
@@ -1,56 +1,69 @@
-<p>correspondence-book-page works!</p>
+<div>
+    <div *ngFor="let line of correspondenceBook" class="input-group input-group-sm mb-3">
 
-<!-- 
-<div >
-    <div *ngFor="let line of report.lines" class="input-group mb-1 report-lines px-2">
-        <div class="input-group-text col-1 text-wrap line-header" id="inputGroup-sizing-default1">
-            {{line.lineHeader | uppercase}}</div>
-
-
-        <div class="input-group-text col-11 text-wrap align-content-start d-flex flex-column p-0"
-            id="inputGroup-sizing-default2">
-            <div class="line-desc p-1">
-                <div class="desc-header">{{line.descriptionHeader | uppercase}}</div>
-                <div *ngFor="let linedesc of line.descriptionLines" class="desc-content-line">{{linedesc}}</div>
+        <div class="input-group-text text-wrap d-flex flex-column line-header">
+            <div>
+                <span class="badge bg-small bg-secondary">{{getTime(line.timestamp)}}</span>
             </div>
-
-            <div class="d-flex flex-wrap line-value" [ngClass]="{
-                'flex-column': line.lineValues.length<=2,
-                'flex-row': line.lineValues.length>2,
-                }">
-                <div *ngFor="let lineValue of line.lineValues" class="d-flex m-1 align-items-center aa">
-                    <small *ngIf="lineValue.valueType !== lineValueTypes.bool" class="line-value-label me-1"
-                        id="inputGroup-sizing-default2">
-                        {{lineValue.label}}:
-                    </small>
-
-                    <input *ngIf="!lineValue.valueType || (lineValue.valueType === lineValueTypes.textLine)"
-                        [(ngModel)]="lineValue.value" type="text" class="form-control d-flex" aria-label="Default"
-                        aria-describedby="inputGroup-sizing-default">
-
-                    <div *ngIf="lineValue.valueType === lineValueTypes.textArea" class="d-flex">
-                        <textarea [(ngModel)]="lineValue.value" class="form-control" rows="3" cols="1000"
-                            aria-label="Default" aria-describedby="inputGroup-sizing-default"></textarea>
-                    </div>
-
-                    <input *ngIf="lineValue.valueType === lineValueTypes.shortNumber" [(ngModel)]="lineValue.value"
-                        type="number" class="form-control line-value-short" aria-label="Default"
-                        aria-describedby="inputGroup-sizing-default">
-
-                    <input *ngIf="lineValue.valueType === lineValueTypes.longNumber" [(ngModel)]="lineValue.value"
-                        type="number" class="form-control line-value-long" aria-label="Default"
-                        aria-describedby="inputGroup-sizing-default">
-
-                    <button *ngIf="lineValue.valueType === lineValueTypes.bool" type="button"
-                        class="checkbox btn btn-default">
-                        <label>
-                            <span>{{lineValue.label}}: </span>
-                            <input type="checkbox" class="checkbox style-2 " checked="{{lineValue.value}}">
-                        </label>
-                    </button>
-                </div>
+            <div>
+                <span *ngIf="line.transmitDirection===transmitDirections.OUTGOING"
+                    class="badge bg-small bg-primary">{{'Nadawanie DO >>>>' | uppercase}}</span>
+                <span *ngIf="line.transmitDirection===transmitDirections.INCOMING"
+                    class="badge bg-small bg-success">{{'>>> Odbiór OD'
+                    | uppercase}}</span>
             </div>
-
+            <div>
+                <span class="badge bg-small bg-secondary">{{line.codename}}</span>
+            </div>
         </div>
+
+        <div class="form-control text-wrap content">
+            {{line.content}}
+        </div>
+
     </div>
-</div> -->
+</div>
+
+
+
+
+<div class="input-group mb-3">
+    <button class="input-group-text btn btn-outline-secondary p-0 m-0" type="button">Button1</button>
+    <button class="input-group-text btn btn-outline-secondary p-0 m-0" type="button">Button2</button>
+    <input type="text" class="input-group-text form-control" placeholder=""
+        aria-label="Example text with two button addons">
+</div>
+
+
+<div class="input-group mb-3">
+    <button class="input-group-text btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+        aria-expanded="false">Dropdown</button>
+    <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <li>
+            <hr class="dropdown-divider">
+        </li>
+        <li><a class="dropdown-item" href="#">Separated link</a></li>
+    </ul>
+    <input type="text" class="input-group-form form-control m-0" aria-label="Text input with dropdown button">
+</div>
+
+
+
+
+<div class="input-group">
+    <button class="m-0 btn btn-outline-secondary dropdown-toggle name" type="button" data-bs-toggle="dropdown"
+        aria-expanded="false">'dec?.name'</button>
+    <div class="dropdown-menu dropdown-menu-end">
+        <div><span class="dropdown-item">adasdasd</span></div>
+    </div>
+
+    <span class="input-group-text p-1" id="basic-addon1">jesli TAK to:</span>
+
+    <button class="input-group-text btn btn-outline-primary m-0 next-block" type="button">pokaz
+        <i class="fa fa-location-arrow" aria-hidden="true"></i>
+    </button>
+
+</div>
